fix app-update z-index

--- a/src/app/app-updates/update-prompt/update-prompt.component.scss
+++ b/src/app/app-updates/update-prompt/update-prompt.component.scss
@@ -5,6 +5,7 @@
   bottom: .5em;
   right: .5em;
   left: .5em;
+  z-index: 1;  // float on top of page content
   @include media-xs {
     left: inherit;
   }
