--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 20;  // float on top
+  z-index: 2;  // float on top of page content
 }
 
 #swipe-handle {
